maxon-bin/specs/fragments/parameter-labels.error-default-positional.1.test
// Test: parameter-labels.error-default-positional.1
function repeat(value int, times int = 1) returns int
    return value * times
end 'repeat'

function main() returns int
    return repeat(7, 6)
end 'main'
---
MaxoncStderr: ```
Semantic Error: temp_fragment.maxon:7:22
Too many positional arguments
  Function 'repeat' has 1 required parameter

  7 |     return repeat(7, 6)
    |                      ^
```
---
// IR: N/A (compiler error test)
---
